// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BlockingError > renders ACCESS_DENIED 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="error-content"
    >
      <div
        class="streetmix-logo"
      />
      <div
        class="error-text"
      >
        <h1>
          You are not signed in.
        </h1>
        <p>
          You cancelled the sign in process.
        </p>
      </div>
      <button
        class="btn btn-primary"
        type="button"
      >
        Return to Streetmix
      </button>
      <p
        class="error-help-link"
      >
        <a
          href="https://docs.streetmix.net/user-guide/support/troubleshooting"
          rel="noopener noreferrer"
          target="_blank"
        >
          Need help?
        </a>
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError > renders AUTH_EXPIRED 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="error-content"
    >
      <div
        class="streetmix-logo"
      />
      <div
        class="error-text"
      >
        <h1>
          We automatically signed you out due to inactivity.
        </h1>
        <p>
          Please sign in again.
        </p>
      </div>
      <button
        class="btn btn-primary"
        type="button"
      >
        Sign in
      </button>
       
      <button
        class="btn btn-primary"
        type="button"
      >
        Return to Streetmix
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError > renders AUTH_PROBLEM_API_PROBLEM 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="error-content"
    >
      <div
        class="streetmix-logo"
      />
      <div
        class="error-text"
      >
        <h1>
          There was a problem with signing you in.
        </h1>
        <p>
          There was a problem with authentication. Please try again later. If you still need help, please 
          <a
            href="https://docs.streetmix.net/community"
            rel="noopener noreferrer"
            target="_blank"
          >
            contact us
          </a>
          .
        </p>
      </div>
      <button
        class="btn btn-primary"
        type="button"
      >
        Return to Streetmix
      </button>
      <p
        class="error-help-link"
      >
        <a
          href="https://docs.streetmix.net/user-guide/support/troubleshooting"
          rel="noopener noreferrer"
          target="_blank"
        >
          Need help?
        </a>
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError > renders AUTH_PROBLEM_NO_ACCESS_TOKEN 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="error-content"
    >
      <div
        class="streetmix-logo"
      />
      <div
        class="error-text"
      >
        <h1>
          There was a problem with signing you in.
        </h1>
        <p>
          There was a problem with authentication. Please try again later. If you still need help, please 
          <a
            href="https://docs.streetmix.net/community"
            rel="noopener noreferrer"
            target="_blank"
          >
            contact us
          </a>
          .
        </p>
      </div>
      <button
        class="btn btn-primary"
        type="button"
      >
        Return to Streetmix
      </button>
      <p
        class="error-help-link"
      >
        <a
          href="https://docs.streetmix.net/user-guide/support/troubleshooting"
          rel="noopener noreferrer"
          target="_blank"
        >
          Need help?
        </a>
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError > renders AUTH_PROBLEM_NO_TWITTER_ACCESS_TOKEN 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="error-content"
    >
      <div
        class="streetmix-logo"
      />
      <div
        class="error-text"
      >
        <h1>
          There was a problem with signing you in.
        </h1>
        <p>
          There was a problem with authentication. Please try again later. If you still need help, please 
          <a
            href="https://docs.streetmix.net/community"
            rel="noopener noreferrer"
            target="_blank"
          >
            contact us
          </a>
          .
        </p>
      </div>
      <button
        class="btn btn-primary"
        type="button"
      >
        Return to Streetmix
      </button>
      <p
        class="error-help-link"
      >
        <a
          href="https://docs.streetmix.net/user-guide/support/troubleshooting"
          rel="noopener noreferrer"
          target="_blank"
        >
          Need help?
        </a>
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError > renders AUTH_PROBLEM_NO_TWITTER_REQUEST_TOKEN 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="error-content"
    >
      <div
        class="streetmix-logo"
      />
      <div
        class="error-text"
      >
        <h1>
          There was a problem with signing you in.
        </h1>
        <p>
          There was a problem with authentication. Please try again later. If you still need help, please 
          <a
            href="https://docs.streetmix.net/community"
            rel="noopener noreferrer"
            target="_blank"
          >
            contact us
          </a>
          .
        </p>
      </div>
      <button
        class="btn btn-primary"
        type="button"
      >
        Return to Streetmix
      </button>
      <p
        class="error-help-link"
      >
        <a
          href="https://docs.streetmix.net/user-guide/support/troubleshooting"
          rel="noopener noreferrer"
          target="_blank"
        >
          Need help?
        </a>
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError > renders FORCE_RELOAD_SIGN_IN 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="error-content"
    >
      <div
        class="streetmix-logo"
      />
      <div
        class="error-text"
      >
        <h1>
          You signed in in another window.
        </h1>
        <p>
          Please reload this page to return to Streetmix.
        </p>
      </div>
      <button
        class="btn btn-primary"
        type="button"
      >
        Reload the page
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError > renders FORCE_RELOAD_SIGN_OUT 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="error-content"
    >
      <div
        class="streetmix-logo"
      />
      <div
        class="error-text"
      >
        <h1>
          You signed out in another window.
        </h1>
        <p>
          Please reload this page to return to Streetmix.
        </p>
      </div>
      <button
        class="btn btn-primary"
        type="button"
      >
        Reload the page
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError > renders GALLERY_STREET_FAILURE 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="error-content"
    >
      <div
        class="streetmix-logo"
      />
      <div
        class="error-text"
      >
        <h1>
          Having trouble…
        </h1>
        <p>
          We’re having trouble loading this street.
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError > renders GENERIC_ERROR 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="error-content"
    >
      <div
        class="streetmix-logo"
      />
      <div
        class="error-text"
      >
        <h1>
          Something went wrong.
        </h1>
        <p>
          We’re sorry – something went wrong. Please try again later. If you still need help, please 
          <a
            href="https://docs.streetmix.net/community"
            rel="noopener noreferrer"
            target="_blank"
          >
            contact us
          </a>
          .
        </p>
      </div>
      <button
        class="btn btn-primary"
        type="button"
      >
        Return to Streetmix
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError > renders NEW_STREET_SERVER_FAILURE 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="error-content"
    >
      <div
        class="streetmix-logo"
      />
      <div
        class="error-text"
      >
        <h1>
          Having trouble…
        </h1>
        <p>
          We’re having trouble loading Streetmix.
        </p>
      </div>
      <button
        class="btn btn-primary"
        type="button"
      >
        Try again
      </button>
      <p
        class="error-help-link"
      >
        <a
          href="https://docs.streetmix.net/user-guide/support/troubleshooting"
          rel="noopener noreferrer"
          target="_blank"
        >
          Need help?
        </a>
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError > renders NO_STREET 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="error-content"
    >
      <div
        class="error-text"
      >
        <h1>
          No street selected.
        </h1>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError > renders NOT_FOUND 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="error-content"
    >
      <div
        class="streetmix-logo"
      />
      <div
        class="error-text"
      >
        <h1>
          Page not found.
        </h1>
        <p>
          Oh, boy. There is no page with this address!
        </p>
      </div>
      <button
        class="btn btn-primary"
        type="button"
      >
        Return to Streetmix
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError > renders SIGN_IN_401 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="error-content"
    >
      <div
        class="streetmix-logo"
      />
      <div
        class="error-text"
      >
        <h1>
          Having trouble…
        </h1>
        <p>
          We’re having trouble loading Streetmix.
          <br />
          (Error RM1.)
        </p>
      </div>
      <button
        class="btn btn-primary"
        type="button"
      >
        Try again
      </button>
      <p
        class="error-help-link"
      >
        <a
          href="https://docs.streetmix.net/user-guide/support/troubleshooting"
          rel="noopener noreferrer"
          target="_blank"
        >
          Need help?
        </a>
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError > renders SIGN_IN_SERVER_FAILURE 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="error-content"
    >
      <div
        class="streetmix-logo"
      />
      <div
        class="error-text"
      >
        <h1>
          Having trouble…
        </h1>
        <p>
          We’re having trouble loading Streetmix.
          <br />
          (Error 15A.)
        </p>
      </div>
      <button
        class="btn btn-primary"
        type="button"
      >
        Try again
      </button>
      <p
        class="error-help-link"
      >
        <a
          href="https://docs.streetmix.net/user-guide/support/troubleshooting"
          rel="noopener noreferrer"
          target="_blank"
        >
          Need help?
        </a>
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError > renders SIGN_OUT 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="error-content"
    >
      <div
        class="streetmix-logo"
      />
      <div
        class="error-text"
      >
        <h1>
          You are now signed out.
        </h1>
      </div>
      <button
        class="btn btn-primary"
        type="button"
      >
        Return to Streetmix
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError > renders STREET_404 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="error-content"
    >
      <div
        class="streetmix-logo"
      />
      <div
        class="error-text"
      >
        <h1>
          Street not found.
        </h1>
        <p>
          Oh, boy. There is no street with this link!
        </p>
      </div>
      <button
        class="btn btn-primary"
        type="button"
      >
        Return to Streetmix
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError > renders STREET_404_BUT_LINK_TO_USER 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="error-content"
    >
      <div
        class="streetmix-logo"
      />
      <div
        class="error-text"
      >
        <h1>
          Street not found.
        </h1>
        <p>
          There is no street with this link! But you can look at other streets by 
          <a
            href="/foo"
          >
            <span
              class="avatar"
            >
              <object
                aria-label="foo"
                type="image/png"
              >
                <img
                  alt="foo"
                  src="test-file-stub"
                />
              </object>
            </span>
            foo
          </a>
        </p>
      </div>
      <button
        class="btn btn-primary"
        type="button"
      >
        Return to Streetmix
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError > renders STREET_410_BUT_LINK_TO_USER 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="error-content"
    >
      <div
        class="streetmix-logo"
      />
      <div
        class="error-text"
      >
        <h1>
          This street has been deleted.
        </h1>
        <p>
          There is no longer a street with this link, but you can look at other streets by 
          <a
            href="/foo"
          >
            <span
              class="avatar"
            >
              <object
                aria-label="foo"
                type="image/png"
              >
                <img
                  alt="foo"
                  src="test-file-stub"
                />
              </object>
            </span>
            foo
          </a>
        </p>
      </div>
      <button
        class="btn btn-primary"
        type="button"
      >
        Return to Streetmix
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError > renders STREET_DATA_FAILURE 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="error-content"
    >
      <div
        class="streetmix-logo"
      />
      <div
        class="error-text"
      >
        <h1>
          Having trouble…
        </h1>
        <p>
          We’re having trouble loading Streetmix.
          <br />
          (Error 9B.)
        </p>
      </div>
      <button
        class="btn btn-primary"
        type="button"
      >
        Try again
      </button>
      <p
        class="error-help-link"
      >
        <a
          href="https://docs.streetmix.net/user-guide/support/troubleshooting"
          rel="noopener noreferrer"
          target="_blank"
        >
          Need help?
        </a>
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError > renders STREET_DELETED_ELSEWHERE 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="error-content"
    >
      <div
        class="streetmix-logo"
      />
      <div
        class="error-text"
      >
        <h1>
          This street has been deleted elsewhere.
        </h1>
        <p>
          This street has been deleted in another browser.
        </p>
      </div>
      <button
        class="btn btn-primary"
        type="button"
      >
        Return to Streetmix
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockingError > renders UNSUPPORTED_BROWSER 1`] = `
<DocumentFragment>
  <div
    id="error"
  >
    <div
      class="error-content"
    >
      <div
        class="streetmix-logo"
      />
      <div
        class="error-text"
      >
        <h1>
          Streetmix doesn’t work on your browser.
        </h1>
        <p>
          Sorry about that. You might want to try 
          <a
            href="https://www.google.com/chrome"
            rel="noopener noreferrer"
            target="_blank"
          >
            Chrome
          </a>
          , 
          <a
            href="https://www.mozilla.org/firefox"
            rel="noopener noreferrer"
            target="_blank"
          >
            Firefox
          </a>
          , 
          <a
            href="https://www.microsoft.com/en-us/windows/microsoft-edge"
            rel="noopener noreferrer"
            target="_blank"
          >
            Microsoft Edge
          </a>
          , or Safari.
        </p>
        <p>
          Are you on Internet Explorer? 
          <a
            href="https://docs.streetmix.net/user-guide/support/faq#internet-explorer"
            rel="noopener noreferrer"
            target="_blank"
          >
            Find out more.
          </a>
        </p>
        <p>
          If you think your browser should be supported, please 
          <a
            href="https://docs.streetmix.net/community"
            rel="noopener noreferrer"
            target="_blank"
          >
            contact us
          </a>
          .
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
